# political_leaning_news_detection_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: azure-webapps-python.yml  plndapp-AutoDeployTrigger-01f0edb2-ed2d-4f4e-8cde-68ada9d75b49.yml
LoRA/: LoRA_02.ipynb
app/: .env  config.py  constants.py  logger_config.py  main.py  model.py  news_app.py  schema.py  scraper.py
app/tests/: test_schema.py  test_scraper.py
data_analysis/: data_review.py
quantization/: quantized_model.ipynb
