[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "python-dotenv>=1.0.1",
    "torch>=2.5.1",
    "transformers>=4.47.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mlflow>=2.19.0",
    "pytest>=8.3.4",
    "typer>=0.15.1",
]
lint = [
    "ruff>=0.8.4",
]
