[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.6",
    "loguru>=0.7.3",
    "newsapi-python>=0.2.7",
    "nltk>=3.9.1",
    "peft>=0.14.0",
    "python-dotenv>=1.0.1",
    "torch>=2.5.1",
    "transformers>=4.47.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mlflow>=2.19.0",
    "pytest>=8.3.4",
    "typer>=0.15.1",
]
lint = [
    "ruff>=0.8.4",
]
